test_fm/_test37.nj
//
// non-boolean test in do-statement
//

public class Main extends Object {

  public static void main() {
  }

  void f1(Boolean b) {
    local Integer x;
    do {
      x = 42;
    } while (1);
  }

}
